[package]
name = "enum_processes"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"

[dependencies]
regex = "1.11.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "ntdef",
    "processthreadsapi",
    "psapi",
    "handleapi",
    "memoryapi",
] 
